Fix Options page z-index bug

--- a/packages/ag-charts-website/src/features/api-documentation/components/OptionsNavigation.module.scss
+++ b/packages/ag-charts-website/src/features/api-documentation/components/OptionsNavigation.module.scss
@@ -17,6 +17,7 @@
 
     @media screen and (min-width: $breakpoint-options-medium) {
         overflow-y: auto;
+        z-index: unset;
     }
 
     > header {
